--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <span data-text="2">2</span>
                         </div>
                         <div class="item-team-line"></div>
-                        <div class="item-team-name">Jess Fox</div>
+                        <div class="item-team-name">Liam Castro</div>
                     </div>
                     <div class="item-team-hover">
                         <div class="item-team-designation" style="--i:0">
